Prevent horizontal scrolling on touch devices

--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -3,6 +3,10 @@
 
 
 // Site-wide layout elements
+html,
+body {
+  overflow-x: hidden;
+}
 
 .give-section-white {
   background-color: #fff;
